<resources>

    <string name="app_name">S 回收站</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="contactus">联系我们</string>
    <string name="termsandconditions">服务条款</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="open_source_license">开源许可证</string>
    <string name="update">更新</string>
    <string name="current_version">版本 2.8.25</string>
    <string name="has_been_installed">已安装最新版本</string>
    <string name="action_bar_back_button_navigatate_up">向上导航</string>
    <string name="cancel">取消</string>
    <string name="prompt_request_camara">打开S 回收站应用需要获取相应的权限，是否开启？</string>
    <string name="prompt_we_need_camera">S 回收站只有获得相应的权限才可正常使用。</string>
    <string name="select_pic">选取文件</string>
    <string name="select_image">选取图片</string>
    <string name="select_video">选取视频</string>
    <string name="select_music">选取音乐</string>
    <string name="select_doc">选取文档</string>
    <string name="select_app">选取应用程序</string>
    <string name="recycle">恢复</string>
    <string name="delete">删除</string>
    <string name="all">全部</string>
    <string name="select_items">选择项目</string>
    <string name="settings_select_header">您想要S 回收站保存什么？可以打开下面6个开关来进行相应文件的保存。所有文件的默认保存时长为1天，超过后会彻底删除。</string>
    <string name="picture">图片</string>
    <string name="pic_item">jpg,png,tif等</string>
    <string name="video">视频</string>
    <string name="video_item">mpeg,avi,mp4等</string>
    <string name="audio">音乐</string>
    <string name="audio_item">mp3,wma,ogg等</string>
    <string name="doc">文档</string>
    <string name="doc_item">pdf,doc,ppt等</string>
    <string name="applications">应用程序</string>
    <string name="applications_item">保护卸载的应用</string>
    <string name="other_files">其他文件</string>
    <string name="other_files_item">zip,rar等</string>
    <string name="no_file_to_do">没有文件可供恢复或删除</string>
    <string name="set_file_save_time">保存时长</string>
    <string name="set_file_save_time_title">保存时间从1天延长到1个月</string>

</resources>
