<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".about.AboutActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="32dp"
        android:paddingStart="32dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:src="@mipmap/filerecycleemptyicon" />

        <TextView
            android:id="@+id/appTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:fontFamily="sec-roboto-condensed"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/tar"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:alpha="0.6"
            android:gravity="center"
            android:text="@string/current_version"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/tar"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/versionCheckTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="11dp"
                    android:alpha="0.6"
                    android:gravity="center"
                    android:text="@string/has_been_installed"
                    android:textColor="@color/tar"
                    android:textSize="14sp" />

            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="38dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/termsAndConditionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:alpha="0.9"
            android:background="@drawable/text_ripple"
            android:fontFamily="sec-roboto-condensed"
            android:gravity="center"
            android:minHeight="15dp"
            android:padding="4dp"
            android:text="@string/termsandconditions"
            android:textColor="@color/tar"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/privacyPolicyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:alpha="0.9"
            android:background="@drawable/text_ripple"
            android:fontFamily="sec-roboto-condensed"
            android:gravity="center"
            android:minHeight="15dp"
            android:padding="4dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/tar"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/openSourceLicenseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="32dp"
            android:alpha="0.9"
            android:background="@drawable/text_ripple"
            android:fontFamily="sec-roboto-condensed"
            android:gravity="center"
            android:minHeight="15dp"
            android:padding="4dp"
            android:text="@string/open_source_license"
            android:textColor="@color/tar"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>